# Drone_Landing_to_Slope

./: README.md
rplidar_data/: CMakeLists.txt  package.xml
rplidar_data/include/: Publisher_Subscriber.h
rplidar_data/launch/: Leg_control.launch  Leg_servo.launch  Lidar_control.launch  detect_ground_and_control_leg.launch  distance.launch  dynamixel.launch  find_minimum.launch  integral_controller.launch  proportional_controller.launch  start.launch  subfunction.launch
rplidar_data/msg/: alpha.msg  local_map.msg  map.msg  packet.msg  phi.msg  polar.msg  xyz.msg
rplidar_data/rplidar_data/: CMakeLists.txt
rplidar_data/rplidar_data/launch/: detect_ground_and_control_leg.launch  distance.launch  feedback.launch
rplidar_data/rplidar_data/msg/: polar.msg
rplidar_data/rplidar_data/src/: Leg_servo4.cpp  assemble.cpp  control_theta.cpp  feedback1.cpp  feedback2.cpp  feedback3.cpp  feedback4.cpp  find_min1.cpp  integral_controller1.cpp  integral_controller2.cpp  integral_controller3.cpp  proportional_controller2.cpp  proportional_controller4.cpp  servo_motor.cpp  z_dist3.cpp  z_dist4.cpp
rplidar_data/src/: Imu_data.cpp  Leg_servo.cpp  Leg_servo1.cpp  Leg_servo2.cpp  Leg_servo3.cpp  Leg_servo4.cpp  PID_controller.cpp  PI_controller.cpp  Raw_data2Information.cpp  alpha.cpp  assemble.cpp  avg_z.cpp  control_theta.cpp  feedback1.cpp  feedback2.cpp  feedback3.cpp  feedback4.cpp  find_min.cpp  find_min1.cpp  find_min2.cpp  find_min3.cpp  find_min4.cpp  integral_controller1.cpp  integral_controller2.cpp  integral_controller3.cpp  integral_controller4.cpp  local_map.cpp  proportional_controller1.cpp  proportional_controller3.cpp  servo_motor.cpp  test_xy.cpp  z_dist1.cpp  z_dist2.cpp  z_dist3.cpp  z_dist4.cpp  z_dist_error.cpp
rplidar_data/src/Not use/: Raw_data2Information.cpp  find_min.cpp  servo_motor.cpp
